# progenitor

./: Cargo.toml  release.toml
.github/buildomat/: config.toml
cargo-progenitor/src/: main.rs
example-alertmanager/: Cargo.toml  build.rs
example-alertmanager/openapi/: alertmanager_openapi.yaml
example-alertmanager/src/: lib.rs
example-build/: Cargo.toml
example-macro/: Cargo.toml
example-wasm/: Cargo.toml
example-wasm/src/: main.rs
progenitor/: Cargo.toml
progenitor-client/: Cargo.toml
progenitor-client/src/: progenitor_client.rs
progenitor-impl/: Cargo.toml
progenitor-impl/src/: cli.rs  generator.rs  httpmock.rs  lib.rs  method.rs  template.rs  util.rs
progenitor-impl/tests/output/src/: buildomat_builder.rs  buildomat_builder_tagged.rs  buildomat_httpmock.rs  buildomat_positional.rs  cli_gen_builder.rs  cli_gen_builder_tagged.rs  cli_gen_cli.rs  cli_gen_httpmock.rs  cli_gen_positional.rs  keeper_builder.rs  keeper_builder_tagged.rs  keeper_httpmock.rs  keeper_positional.rs  nexus_builder.rs  nexus_builder_tagged.rs  nexus_httpmock.rs  nexus_positional.rs  param_collision_builder.rs  param_collision_builder_tagged.rs  param_collision_httpmock.rs  param_collision_positional.rs  param_overrides_builder.rs  param_overrides_builder_tagged.rs  param_overrides_httpmock.rs  param_overrides_positional.rs  propolis_server_builder.rs  propolis_server_builder_tagged.rs  propolis_server_cli.rs  propolis_server_httpmock.rs  propolis_server_positional.rs  test_default_params_builder.rs  test_default_params_positional.rs  (+4 more)
progenitor-macro/src/: lib.rs
