[package]
name = "example-alertmanager"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true, features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
progenitor = { path = "../progenitor" }
progenitor-client = { path = "../progenitor-client" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }

[build-dependencies]
bytes = { workspace = true, features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
openapiv3-extended = { version = "6.0", features = ["v2"] }
prettyplease = "0.2"
progenitor = { path = "../progenitor" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_yml = "0.0.12"
syn = "2.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
yaml-rust2 = "0.10.1"
oapi = "0.1.2"
oas3 = { version = "0.16.1", features = ["yaml-spec"] }
openapi_utils = "0.6.1"
serde_json = "1.0.140"
